--- a/pom.xml
+++ b/pom.xml
@@ -5,100 +5,15 @@
 
   <modelVersion>4.0.0</modelVersion>
   
-  <groupId>fr.unice.polytech.soa1</groupId>
-  <artifactId>Shop3000</artifactId>
+  <groupId>fr.SOA.shopping3000</groupId>
+  <artifactId>shopping3000</artifactId>
   <version>1.0</version>
-  <packaging>bundle</packaging>
-  <name>SOA1 :: Integration Flows with Apache Camel</name>
+  <packaging>pom</packaging>
+  <name>Shopping 3000</name>
 
-  <properties>
-    <!-- Version for dependencies (Camel + JUnit + CXF) -->
-    <junit.version>4.12</junit.version>
-    <camel.version>2.15.2</camel.version>
-	<cxf.version>3.1.2</cxf.version>
-    <!-- OSGI bundle information (needed to deploy on ServiceMix) -->
-    <bundle.symbolicName>${project.artifactId}</bundle.symbolicName>
-    <bundle.namespace>fr.unice.polytech.soa1.cookbook</bundle.namespace>
-  </properties>
-  
-  <dependencies>
-    <!-- Apache Camel Integration Flow -->
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-core</artifactId>
-      <version>${camel.version}</version>
-    </dependency>
-    <!-- Apache Camel CSV processing artifacts -->
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-csv</artifactId>
-      <version>${camel.version}</version>
-    </dependency>
-    <!-- Apache Camel HTTP support  -->
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-http</artifactId>
-      <version>${camel.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-spring-ws</artifactId>
-      <version>${camel.version}</version>
-    </dependency>
-	<!-- JUnit for unit tests purpose -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- CXF HTTP/REST implementation -->
-    <dependency>
-      <groupId>org.apache.servicemix.specs</groupId>
-      <artifactId>org.apache.servicemix.specs.jsr339-api-2.0</artifactId>
-      <version>2.5.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.servicemix.bundles</groupId>
-      <artifactId>org.apache.servicemix.bundles.commons-httpclient</artifactId>
-      <version>3.1_7</version>
-    </dependency>
-    <!-- Json data model -->
-    <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
-      <version>20141113</version>
-    </dependency>
-  </dependencies>
+  <modules>
+    <module>Boutiques</module>
+    <module>shopping3000</module>
+  </modules>
 
-  <build>
-    <plugins>
-      <!-- Maven build plugin to create an OSGI bundle instead of a plain JAR file-->
-      <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-        <extensions>true</extensions>
-        <version>2.5.4</version>
-        <executions>
-          <execution>
-            <id>bundle-manifest</id>
-            <phase>process-classes</phase>
-            <goals>
-              <goal>manifest</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <instructions>
-			<Embed-Dependency>*;scope=compile;inline=false</Embed-Dependency>
-			<Embed-Transitive>true</Embed-Transitive>
-            <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
-            <Bundle-Version>${project.version}</Bundle-Version>
-            <Import-Package>*</Import-Package>
-            <Export-Package>${bundle.namespace}.flows.*;version="${project.version}"</Export-Package>
-          </instructions>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
