--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
+# Created by .ignore support plugin (hsz.mobi)
+### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
 *.iml
 
 ## Directory-based project format:
 .idea/
+**/.idea
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
 # .idea/workspace.xml
 # .idea/tasks.xml
 # .idea/dictionaries
-# .idea/shelf
 
 # Sensitive or high-churn files:
 # .idea/dataSources.ids
@@ -45,6 +47,18 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
-fabric.properties
+### Java template
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
 
 target
