projet qui dis hello word

--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0         
+			     http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  
-  <groupId>fr.SOA.shopping3000</groupId>
-  <artifactId>shopping3000</artifactId>
+
+  <groupId>fr.SOA</groupId>
+  <artifactId>system</artifactId>
   <version>1.0</version>
   <packaging>pom</packaging>
-  <name>Shopping 3000</name>
+  <name>shopping3000 :: Complete System</name>
 
   <modules>
+    <module>flows</module>
     <module>Boutiques</module>
-    <module>shopping3000</module>
   </modules>
-
+    
 </project>
