--- a/flows/pom.xml
+++ b/flows/pom.xml
@@ -44,6 +44,12 @@
       <artifactId>camel-spring-ws</artifactId>
       <version>${camel.version}</version>
     </dependency>
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
